<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0221709"
    tools:context=".view.RegisterActivity">

    <!-- incluyo el nuevo toolbar que creé -->
    <include
        android:id="@+id/barSecond"
        layout="@layout/action_bar_toolbar"/>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_svg_launcher_splash"
        android:contentDescription="@string/str_content_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/containerLogin"/>
    <View
        android:id="@+id/containerLogin"
        style="@style/st_ContainerLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
        android:id="@+id/tv_email_user"
        style="@style/st_etx_login"
        android:autofillHints="@string/prompt_email"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:drawableEnd="@drawable/ic_email"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toTopOf="@+id/containerLogin"
        app:layout_constraintBottom_toTopOf="@+id/tv_proveedor"/>

    <EditText
        android:id="@+id/tv_proveedor"
        style="@style/st_etx_login"
        android:autofillHints="@string/prompt_password"
        android:hint="@string/str_password"
        android:drawableEnd="@drawable/ic_eye"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toBottomOf="@+id/tv_email_user"
        app:layout_constraintBottom_toTopOf="@+id/btn_register_acc"/>
    <!-- Definir el botón de cerrar sesión como material design button-->
    <Button
        android:id="@+id/btn_register_acc"
        style="@style/st_btn_logout"
        android:text="@string/str_register_acc"
        android:layout_marginStart="8dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintBottom_toBottomOf="@+id/containerLogin"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancel_reg"
        app:layout_constraintStart_toStartOf="@+id/containerLogin"
        app:layout_constraintTop_toBottomOf="@+id/tv_proveedor" />

    <Button
        android:id="@+id/btn_cancel_reg"
        style="@style/st_btn_logout"
        android:text="@string/str_btn_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/containerLogin"
        app:layout_constraintEnd_toEndOf="@+id/containerLogin"
        app:layout_constraintStart_toEndOf="@+id/btn_register_acc"
        app:layout_constraintTop_toBottomOf="@+id/tv_proveedor" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ic_volver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/barSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01"
        app:srcCompat="@drawable/ic_flip_to_back_24"
        android:contentDescription="@string/str_btn_volver_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>