<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/clr_opa_black"
    tools:context=".view.fragments.UltimoWodFragment">

    <View
        android:id="@+id/contain_wod"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/drw_corners"
        app:layout_constraintBottom_toTopOf="@+id/divider1h"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        style="@style/st_frg_ult_wod"
        android:id="@+id/tv_wod"
        android:text="@string/str_wod"
        android:layout_marginStart="5dp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toTopOf="@+id/contain_wod"
        app:layout_constraintStart_toStartOf="@+id/contain_wod"
        app:layout_constraintEnd_toStartOf="@+id/tv_idwod"
        app:layout_constraintBottom_toTopOf="@+id/tv_tipo"/>

    <TextView
        android:id="@+id/tv_idwod"
        style="@style/st_frg_ult_wod"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintBottom_toTopOf="@+id/spin_dato_tipo"
        app:layout_constraintEnd_toEndOf="@+id/contain_wod"
        app:layout_constraintStart_toEndOf="@+id/tv_wod"
        app:layout_constraintTop_toTopOf="@+id/contain_wod"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        style="@style/st_frg_ult_wod"
        android:id="@+id/tv_tipo"
        android:text="@string/str_tipo"
        app:layout_constraintTop_toBottomOf="@+id/tv_wod"
        app:layout_constraintStart_toStartOf="@+id/contain_wod"
        app:layout_constraintEnd_toStartOf="@+id/spin_dato_tipo"
        app:layout_constraintBottom_toTopOf="@+id/tv_tiempo"/>

    <TextView
        android:id="@+id/spin_dato_tipo"
        style="@style/st_frg_ult_wod"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintBottom_toTopOf="@+id/tv_dato_tiempo"
        app:layout_constraintEnd_toEndOf="@+id/contain_wod"
        app:layout_constraintStart_toEndOf="@id/tv_tipo"
        app:layout_constraintTop_toBottomOf="@+id/tv_idwod"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <TextView
        style="@style/st_frg_ult_wod"
        android:id="@id/tv_tiempo"
        android:text="@string/str_time_cap"
        app:layout_constraintTop_toBottomOf="@id/tv_tipo"
        app:layout_constraintStart_toStartOf="@+id/contain_wod"
        app:layout_constraintEnd_toStartOf="@id/tv_dato_tiempo"
        app:layout_constraintBottom_toTopOf="@id/tv_rondas"/>

    <TextView
        android:id="@id/tv_dato_tiempo"
        style="@style/st_frg_ult_wod"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintBottom_toTopOf="@id/tv_dato_rondas"
        app:layout_constraintEnd_toEndOf="@+id/contain_wod"
        app:layout_constraintStart_toEndOf="@id/tv_tiempo"
        app:layout_constraintTop_toBottomOf="@id/spin_dato_tipo"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        style="@style/st_frg_ult_wod"
        android:id="@+id/tv_rondas"
        android:text="@string/str_rondas"
        app:layout_constraintTop_toBottomOf="@+id/tv_tiempo"
        app:layout_constraintStart_toStartOf="@+id/contain_wod"
        app:layout_constraintEnd_toStartOf="@+id/tv_dato_rondas"
        app:layout_constraintBottom_toBottomOf="@+id/contain_wod"/>

    <TextView
        android:id="@+id/tv_dato_rondas"
        style="@style/st_frg_ult_wod"
        android:text="@string/hello_blank_fragment"
        app:layout_constraintBottom_toBottomOf="@+id/contain_wod"
        app:layout_constraintEnd_toEndOf="@+id/contain_wod"
        app:layout_constraintStart_toEndOf="@id/tv_rondas"
        app:layout_constraintTop_toBottomOf="@+id/tv_dato_tiempo"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/divider1h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35"/>

    <TextView
        style="@style/st_frg_ult_wod"
        android:id="@+id/tv_repes"
        android:text="@string/str_repes"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/divider1h"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider1v"
        app:layout_constraintBottom_toTopOf="@+id/divider2h"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/divider1v"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35"/>

    <TextView
        style="@style/st_frg_ult_wod"
        android:id="@+id/tv_descripcion"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/str_describe_ejercicio"
        app:layout_constraintTop_toBottomOf="@+id/divider1h"
        app:layout_constraintStart_toEndOf="@id/divider1v"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/divider2h"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/divider2h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />

    <TextView
        style="@style/st_frg_ult_wod"
        android:id="@+id/tv_dato_repes"
        android:text="@string/str_repes"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toBottomOf="@+id/divider2h"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/divider1v"
        app:layout_constraintBottom_toTopOf="@+id/divider3h"/>

    <TextView
        style="@style/st_frg_ult_wod"
        android:id="@+id/tv_dato_descripcion"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/str_describe_ejercicio"
        app:layout_constraintTop_toBottomOf="@+id/divider2h"
        app:layout_constraintStart_toEndOf="@id/divider1v"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/divider3h"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/divider3h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/divider4h"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/btn_volver_ultimo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_volver"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/divider4h"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/divider1v" />


</androidx.constraintlayout.widget.ConstraintLayout>